apps/core/traefik/default-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: default
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  headers:
    # Security Headers
    # browserXssFilter: true # Prevents some types of XSS attacks by enabling the XSS filter in browsers
    # contentTypeNosniff: true # Prevents browsers from interpreting files as a different MIME type
    # forceSTSHeader: true # Ensures that STS is always sent
    # stsIncludeSubdomains: true # Apply STS to all subdomains
    # stsPreload: true # Allows the domain to be preloaded with STS by browsers
    # stsSeconds: 15552000 # Sets the STS duration to 180 days (6 months)
    # referrerPolicy: no-referrer # Ensures that the Referer header is not sent
    # contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-src 'self' https:; media-src 'self' https:; object-src 'none'; frame-ancestors 'self'; base-uri 'self'; form-action 'self';" # CSP to prevent loading of unauthorized resources
    # customFrameOptionsValue: SAMEORIGIN # Prevents clickjacking by only allowing framing from the same origin
    # CORS Headers (Enable as needed)
    # customResponseHeaders:
    #   Access-Control-Allow-Origin: "*" # Allow requests from any origin (replace with specific domains if needed)
    #   Access-Control-Allow-Methods: "GET, POST, OPTIONS" # Specify allowed HTTP methods
    #   Access-Control-Allow-Headers: "Content-Type, Authorization" # Specify allowed headers
    # WebSocket Handling (Ensure proper forwarding of WebSocket connections)
    customRequestHeaders:
      X-Forwarded-Proto: https # Forward protocol to backend
      Upgrade: "websocket" # Enable WebSocket upgrade
      Connection: "upgrade" # Set connection header for WebSockets
    # SSL Redirect and Strict Transport Security (STS)
    # sslRedirect: true # Redirect HTTP to HTTPS
    # forceSTSHeader: true # Enforce Strict Transport Security (STS)
    # stsIncludeSubdomains: true # Apply STS to all subdomains
    # stsPreload: true # Include the domain in STS preload list
    # stsSeconds: 15552000 # STS max-age in seconds (6 months)
    # forwardingTimeouts:
    #   dialTimeout: 10s # Time to establish a connection to the backend
    #   responseHeaderTimeout: 60s # Maximum time to wait for the response headers from the backend
    #   idleTimeout: 5m # Time after which an idle connection is closed
