apps/core/traefik/servarr-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: servarr-cors
  namespace: default
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  headers:
    accessControlAllowOriginList:
      - "*"
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "OPTIONS"
    accessControlAllowHeaders:
      - "Content-Type"
      - "Authorization"
    accessControlAllowCredentials: true
